# specleft

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  AI_AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GET_STARTED.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-OPEN  Makefile  NOTICE.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  WORKFLOW.md  agent-design-spec-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pre-commit.yml  publish-mcp.yml  publish.yml  test-mcp-e2e.yml
.opencode/plans/: issue-70-features-add.md
.specleft/: policy.yml
.specleft/licenses/: policy-core.yml  policy.yml
.specleft/templates/: prd-template.yml
docs/: SKILL.md  agent-contract.md  ai-agents-main.md  ai-agents.md  cli-reference.md  feature-template.md  getting-started.md  index.md  mcp-testing.md  spec-format.md  why-not-bdd.md
examples/: features.json  test_example.py  test_example_old.py
examples/tests/: test_auth_001.py  test_parse_001.py
features/: feature-1-planning-mode.md  feature-1-user-authentication.md  feature-2-payments-and-refunds.md  feature-2-specification-format.md  feature-3-canonical-json-output.md  feature-3-subscriptions.md  feature-4-status-coverage-inspection.md  feature-5-policy-enforcement.md  feature-6-ci-experience-messaging.md  feature-7-autonomous-agent-test-execution.md  feature-8-agent-contract-introspection.md  feature-9-cli-feature-authoring.md  feature-mcp-server.md  feature-skill-integrity.md  non-goals.md  open-questions.md  overview.md
mcp/: test-mcp.Dockerfile
scripts/: update_spec_coverage_badge.py
src/specleft/: __init__.py  collector.py  decorators.py  parser.py  pytest_plugin.py  schema.py  skeleton_revisor.py  spec_differ.py  test_revisor.py  validator.py  version.py
src/specleft/cli/: __init__.py  main.py
src/specleft/commands/: __init__.py  cli_access.py  constants.py  contract.py  coverage.py  doctor.py  enforce.py  features.py  formatters.py  guide.py  guide_content.py  init.py  input_validation.py  license.py  mcp.py  next.py  output.py  plan.py  skill.py  status.py  test.py  types.py
src/specleft/commands/contracts/: __init__.py  payloads.py  runner.py  table.py  types.py  utils.py
src/specleft/enforcement/: __init__.py  engine.py
src/specleft/license/: __init__.py  canonical.py  repo_identity.py  schema.py  status.py  verify.py
src/specleft/mcp/: __init__.py  __main__.py  init_tool.py  payloads.py  server.py
src/specleft/specleft_signing/: __init__.py  canonical.py  exceptions.py  keys.py  schema.py  sign.py  verify.py
src/specleft/templates/: __init__.py  prd_template.py  report.html.jinja2  skeleton_test.py.jinja2  skill_template.py  stub_test.py.jinja2  stub_test_method.py.jinja2
src/specleft/utils/: __init__.py  feature_writer.py  filesystem.py  history.py  messaging.py  skill_integrity.py  specs_dir.py  structure.py  test_discovery.py  text.py
test/acceptance/: test_feature-1-planning-mode.py  test_feature-2-specification-format.py  test_feature-3-canonical-json-output.py  test_feature-4-status-coverage-inspection.py  test_feature-5-policy-enforcement.py  test_feature-6-ci-experience-messaging.py  test_feature-7-autonomous-agent-test-execution.py  test_feature-8-agent-contract-introspection.py
tests/: __init__.py  conftest.py  test_cli.py  test_collector.py  test_decorators.py  test_init.py  test_parser.py  test_pytest_plugin.py  test_revisor.py  test_schema.py  test_spec_differ.py  test_test_revisor.py
tests/acceptance/: conftest.py  test_feature-1-planning-mode.py  test_feature-2-specification-format.py  test_feature-3-canonical-json-output.py  test_feature-4-status-coverage-inspection.py  test_feature-5-policy-enforcement.py  test_feature-6-ci-experience-messaging.py  test_feature-7-autonomous-agent-test-execution.py  test_feature-8-agent-contract-introspection.py  test_feature-9-cli-feature-authoring.py
tests/acceptance/fixtures/: __init__.py  common.py  feature_1.py  feature_2.py  feature_3.py  feature_4.py  feature_5.py  feature_6.py  feature_7.py  feature_8.py  feature_9.py
tests/cli/: test_cli_base.py
tests/collector/: test_collector.py
tests/commands/: test_contract.py  test_contract_runner.py  test_contract_table.py  test_coverage.py  test_doctor.py  test_enforce.py  test_enforce_integration.py  test_features.py  test_features_add.py  test_formatters.py  test_guide.py  test_init.py  test_license.py  test_next.py  test_plan.py  test_prd_template.py  test_skill.py  test_status.py  test_test_report.py  test_test_skeleton.py  test_test_stub.py
tests/decorators/: test_decorators.py
tests/helpers/: filesystem.py  specs.py
tests/license/: __init__.py  fixtures.py  test_canonical.py  test_repo_identity.py  test_schema.py  test_verify.py
tests/mcp/: e2e_stdio.py  test_security.py  test_server.py  test_token_budget.py
tests/parser/: test_parser.py
tests/pytest_plugin/: test_pytest_plugin.py
tests/schema/: test_schema.py
tests/utils/: test_feature_writer.py  test_history.py  test_specs_dir.py  test_text.py
