[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
specleft = ["py.typed", "templates/*.jinja2"]

[project]
name = "specleft"
version = "0.3.0"
description = "A planning-first CLI for AI coding agents to externalize intent before writing code, with optional CI enforcement for Python projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "SpecLeft", email = "richard@specleft.dev"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pytest>=7.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "python-frontmatter>=1.0.0",
    "python-slugify>=8.0.0",
    "pyyaml>=6.0.0",
    "cryptography>=41.0.0",
]
keywords=[
    "ai",
    "agents",
    "testing",
    "bdd",
    "behaviour",
    "behavior",
    "specification",
    "intent",
    "claude",
    "gemini",
    "gpt",
    "copilot",
    "autonomous",
    "verification",
    "plan",
    "pytest",
    "plugin",
    "ci",
    "feature-specs",
    "sdd"
]
[project.urls]
Homepage = "https://github.com/SpecLeft/specleft"
Issues = "https://github.com/SpecLeft/specleft/issues"
Documentation = "https://github.com/SpecLeft/specleft/tree/main/docs"
Repository = "https://github.com/SpecLeft/specleft"

[project.optional-dependencies]
mcp = [
    "fastmcp<3",
]
dev = [
    "pytest-cov",
    "pytest-subtests",
    "pytest-asyncio",
    "tiktoken",
    "black==26.1.0",
    "ruff==0.15.2",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[project.scripts]
specleft = "specleft.cli.main:cli"
spec = "specleft.cli.main:cli"

[project.entry-points.pytest11]
specleft = "specleft.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    ".llm",
    ".specleft",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests
"src/specleft/pytest_plugin.py" = ["ARG001"]  # Allow unused args in pytest hooks

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "specleft_signing.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/specleft",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# SpecLeft filter options (all repeatable)
specleft_features_dir = "features"
specleft_output_dir = ".specleft"
specleft_tag = []
specleft_priority = []
specleft_feature = []
specleft_scenario = []

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert_used in tests
